v0.11
	* ADD : Save position of last edit session on exit
	* ADD : Split a road by selecting only the node
	* ADD : Arrow keys move the map (by Rainer Keller)
	* FIX : when cascade removing, not all children are deleted if they are present multiple times + avoid having twice the same node contiguous in the a road/relation
	* FIX : segfault with MDC containing history where a feature is created and deleted 
	* ADD : "Dirty" layer where all modified features go
	* ADD : "Undo" dock with all undo actions
	* FIX : Start new road from selected node
	* FIX : German translation
	* ADD : Czech translation (Tom Mika)
	* FIX : History window now displays UTF8
	* FIX : Bookmark created from "Download from web" immediately added to bookmarks menu (by rullzer)
	* FIX : Tags undo was pretty much broken
	* FIX : Update undo button state after upload
	* ADD : Make URL in about window selectable (by Max Vasilev)
	* FIX : Style definitions can now use *,? and [abc]
	* ADD : Open/Import multiple files
	* ADD : draw scale
	* FIX : upload order when merging nodes
	* FIX : warn when using wrong credentials
	* ADD : drag the map around with control key for poor Mac owners
	* FIX : We can now select the move tool everytime
	* FIX : Reverse on an area doesn't open it anymore 
	* FIX : Select dialog : fix the size of elements
	* FIX : Roundabout creation. Add tag junction=roundabout
	* FIX : Autoselect source in download dialog
	* ADD : Align nodes function
	* ADD : living_street as a predefined highway tag
	* FIX : use CoordBox method to zoom a little instead of calling zoom
	* ADD : caching mechanism for painters
	* ADD : draw nodes of hovered/selected roads (by Vincent Meurisse)
	* FIX : make the shortcuts for creating a new road and way less interfering
	* ADD : support for OSM links in download dialog (Refs #812) (by Timo Schlüßler)
	* ADD : shortcuts for zoom-in(+) and zoom-out(-) (by Timo Schlüßler)