@@ -48,6 +48,7 @@ class MainWindow : public QMainWindow, public Ui::MainWindow
 		virtual void on_viewZoomInAction_triggered();
 		virtual void on_viewZoomOutAction_triggered();
 		virtual void on_viewZoomWindowAction_triggered();
+		virtual void on_viewDownloadedAction_triggered();
 		virtual void on_viewMoveLeftAction_triggered();
 		virtual void on_viewMoveRightAction_triggered();
 		virtual void on_viewMoveUpAction_triggered();
