@@ -13,26 +13,16 @@
    <string>Merkaartor</string>
   </property>
   <property name="windowIcon" >
-   <iconset resource="Icons/AllIcons.qrc" >
-    <normaloff>:/Icons/Merkaartor.xpm</normaloff>:/Icons/Merkaartor.xpm</iconset>
+   <iconset resource="Icons/AllIcons.qrc" >:/Icons/Merkaartor.xpm</iconset>
   </property>
-  <widget class="QWidget" name="centralWidget" >
-   <property name="geometry" >
-    <rect>
-     <x>0</x>
-     <y>83</y>
-     <width>1000</width>
-     <height>492</height>
-    </rect>
-   </property>
-  </widget>
+  <widget class="QWidget" name="centralWidget" />
   <widget class="QMenuBar" name="menuBar" >
    <property name="geometry" >
     <rect>
      <x>0</x>
      <y>0</y>
      <width>1000</width>
-     <height>25</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuHelp" >
@@ -95,6 +85,8 @@
     <addaction name="viewZoomWindowAction" />
     <addaction name="viewZoomOutAction" />
     <addaction name="viewZoomInAction" />
+    <addaction name="separator" />
+    <addaction name="viewDownloadedAction" />
     <addaction name="separator" />
     <addaction name="mnuProjections" />
     <addaction name="separator" />
@@ -176,27 +168,10 @@
    <addaction name="windowAction" />
    <addaction name="menuHelp" />
   </widget>
-  <widget class="QStatusBar" name="StatusBar" >
-   <property name="geometry" >
-    <rect>
-     <x>0</x>
-     <y>575</y>
-     <width>1000</width>
-     <height>25</height>
-    </rect>
-   </property>
-  </widget>
+  <widget class="QStatusBar" name="StatusBar" />
   <widget class="QToolBar" name="toolBar" >
    <property name="enabled" >
     <bool>true</bool>
-   </property>
-   <property name="geometry" >
-    <rect>
-     <x>0</x>
-     <y>25</y>
-     <width>1000</width>
-     <height>58</height>
-    </rect>
    </property>
    <property name="windowTitle" >
     <string>Tool Bar</string>
@@ -302,8 +277,7 @@
   </action>
   <action name="editUndoAction" >
    <property name="icon" >
-    <iconset resource="Icons/AllIcons.qrc" >
-     <normaloff>:/Icons/edit-undo.xpm</normaloff>:/Icons/edit-undo.xpm</iconset>
+    <iconset resource="Icons/AllIcons.qrc" >:/Icons/edit-undo.xpm</iconset>
    </property>
    <property name="text" >
     <string>&amp;Undo</string>
@@ -314,8 +288,7 @@
   </action>
   <action name="editRedoAction" >
    <property name="icon" >
-    <iconset resource="Icons/AllIcons.qrc" >
-     <normaloff>:/Icons/edit-redo.xpm</normaloff>:/Icons/edit-redo.xpm</iconset>
+    <iconset resource="Icons/AllIcons.qrc" >:/Icons/edit-redo.xpm</iconset>
    </property>
    <property name="text" >
     <string>&amp;Redo</string>
@@ -326,8 +299,7 @@
   </action>
   <action name="editMoveAction" >
    <property name="icon" >
-    <iconset resource="Icons/AllIcons.qrc" >
-     <normaloff>:/Icons/move.xpm</normaloff>:/Icons/move.xpm</iconset>
+    <iconset resource="Icons/AllIcons.qrc" >:/Icons/move.xpm</iconset>
    </property>
    <property name="text" >
     <string>Move</string>
@@ -368,8 +340,7 @@
   </action>
   <action name="editPropertiesAction" >
    <property name="icon" >
-    <iconset resource="Icons/AllIcons.qrc" >
-     <normaloff>:/Icons/toolselect.xpm</normaloff>:/Icons/toolselect.xpm</iconset>
+    <iconset resource="Icons/AllIcons.qrc" >:/Icons/toolselect.xpm</iconset>
    </property>
    <property name="text" >
     <string>Select</string>
@@ -391,8 +362,7 @@
     <bool>false</bool>
    </property>
    <property name="icon" >
-    <iconset resource="Icons/AllIcons.qrc" >
-     <normaloff>:/Icons/remove.xpm</normaloff>:/Icons/remove.xpm</iconset>
+    <iconset resource="Icons/AllIcons.qrc" >:/Icons/remove.xpm</iconset>
    </property>
    <property name="text" >
     <string>R&amp;emove</string>
@@ -422,8 +392,7 @@
     <bool>false</bool>
    </property>
    <property name="icon" >
-    <iconset resource="Icons/AllIcons.qrc" >
-     <normaloff>:/Icons/reverse.xpm</normaloff>:/Icons/reverse.xpm</iconset>
+    <iconset resource="Icons/AllIcons.qrc" >:/Icons/reverse.xpm</iconset>
    </property>
    <property name="text" >
     <string>&amp;Reverse</string>
@@ -704,7 +673,18 @@
     <string>Hide/Show the Undo dock</string>
    </property>
   </action>
-</widget>
+  <action name="viewDownloadedAction" >
+   <property name="checkable" >
+    <bool>true</bool>
+   </property>
+   <property name="text" >
+    <string>View &amp;downloaded areas</string>
+   </property>
+   <property name="shortcut" >
+    <string>Ctrl+Alt+A</string>
+   </property>
+  </action>
+ </widget>
  <resources>
   <include location="Icons/AllIcons.qrc" />
  </resources>
